styles/main/popup_talkwithus.css
.popup {
  align-items: center;
  background: rgba(0,0,0,0.5);
  display: flex;
  height: 100%;
  justify-content: center;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: fixed;
  top: 0;
  transition: 0.3s ease;
  width: 100%;
  z-index: 1001;
}

.popup.active {
  opacity: 1;
  pointer-events: all;
}

.popup-content {
  background: white;
  border-radius: 10px;
  padding: 30px;
  position: relative;
  width: 500px;
}

.close {
  cursor: pointer;
  background: none;
  border: none;
  font-size: 20px;
  position: absolute;
  right: 10px;
  top: 10px;
}

.popup-content h3 {
  color: var(--green);
  font-size: 24px;
  font-weight: 600;
}

.popup-content p {
  color: rgba(0, 0, 0, 0.8);
  font-size: 12px;
  margin-bottom: 20px;
}

.popup-content form {
  display: flex;
  flex-direction: column;
}

.popup-content label {
  display: flex;
  flex-direction: column;
  font-size: 14px;
}

.popup-content input {
  border: 1px solid #ccc;
  border-radius: 5px;
  margin-bottom: 15px;
  padding: 8px;
}

.popup-content input[type="text"]:focus, .popup-content input[type="tel"]:focus {
  border-color: var(--green);
  box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.2);
  outline: none;
}

.popup-content .radio-group {
  display: flex;
  justify-content: space-evenly;
}

.popup-content .radio {
  align-self: center;
  gap: 20px;
}

.popup-content button[type="submit"] {
  background-color: var(--gray);
  border-radius: 5px;
  border: none;
  box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.2);
  color: var(--green);
  cursor: pointer;
  font-size: 14px;
  font-weight: 500;
  margin-top: 10px;
  padding: 10px;
  transition: all 0.2s ease-in-out;
}

.popup-content button[type="submit"]:hover {
  background: var(--green);
  color: var(--white);
}

.popup-content .h-captcha {
  align-self: center;
  transform: scale(0.75);
}

.popup-content p.privacy-notice {
  color: rgba(0, 0, 0, 0.6);
  font-size: 12px;
  margin: 10px 0;
  text-align: center;
}

.popup-content .privacy-notice a {
  color: var(--green);
  font-size: 12px;
  text-decoration: underline;
}

@media (max-width: 600px) { 
  .popup-content {
    padding: 20px;
    width: 90%;
  }
}

